// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo examples Snapshots: basic 1`] = `
.emotion-7 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-7 *,
.emotion-7 *::before,
.emotion-7 *::after {
  box-sizing: inherit;
}

.emotion-7:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-8::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-8 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-8 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-8 > *:nth-last-child(n+3),
  .emotion-8 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-3 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 > [role="img"] {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 0.5em;
  position: relative;
  top: 0.25em;
}

.emotion-0 {
  color: #58606e;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.125em;
  font-weight: 700;
  margin: 0;
}

.emotion-4 {
  display: block;
  margin-bottom: 1em;
  margin-top: 1em;
  max-width: 100%;
}

.emotion-4:first-child {
  border-radius: 0.1875em 0.1875em 0 0;
  margin-top: 0;
}

.emotion-4:last-child {
  border-radius: 0 0 0.1875em 0.1875em;
  margin-bottom: 0;
}

.emotion-6 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-6:last-child {
  margin-bottom: 1.5em;
}

.emotion-5 {
  font-size: 0.875em;
  line-height: 1.5;
}

<Styled(div)>
  <div
    className="emotion-8"
  >
    <Card>
      <Card>
        <div
          className="emotion-7"
        >
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <CardImage
            alt="gradient placeholder"
            src="/images/500x500.png"
          >
            <CardImage
              alt="gradient placeholder"
              src="/images/500x500.png"
            >
              <img
                alt="gradient placeholder"
                className="emotion-4"
                src="/images/500x500.png"
              />
            </CardImage>
          </CardImage>
          <CardBlock>
            <CardBlock>
              <div
                className="emotion-6"
              >
                <Styled(div)>
                  <div
                    className="emotion-5"
                  >
                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                  </div>
                </Styled(div)>
              </div>
            </CardBlock>
          </CardBlock>
        </div>
      </Card>
    </Card>
  </div>
</Styled(div)>
`;

exports[`Card demo examples Snapshots: children 1`] = `
.emotion-8 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-8 *,
.emotion-8 *::before,
.emotion-8 *::after {
  box-sizing: inherit;
}

.emotion-8:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-9::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-9 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-9 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-9 > *:nth-last-child(n+3),
  .emotion-9 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-3 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 > [role="img"] {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 0.5em;
  position: relative;
  top: 0.25em;
}

.emotion-0 {
  color: #58606e;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.125em;
  font-weight: 700;
  margin: 0;
}

.emotion-7 {
  background-color: #ebeff5;
  margin: 1em 0;
  padding: 1em;
}

.emotion-7:last-child {
  border-radius: 0 0 0.1875em 0.1875em;
  margin-bottom: 0;
}

.emotion-6 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border-color: #c8d1e0;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2.5em;
  margin: 0;
  min-width: 2.5em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  width: 100%;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.emotion-6:focus {
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #ffffff,0 0 0 2px #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:hover {
  background-color: #f5f7fa;
  border-color: #5691f0;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:focus:active,
.emotion-6:focus:hover {
  border-color: #c8d1e0;
}

.emotion-6:active {
  background-color: #ebeff5;
  border-color: #1d5bbf;
  color: #3272d9;
}

.emotion-6::-moz-focus-inner {
  border: 0;
}

.emotion-6 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-6 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-6 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-6 [role="img"]:only-child {
  margin: 0;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 100%;
  pointer-events: none;
  width: 100%;
}

.emotion-4 {
  display: block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 0.875em;
  line-height: 2.857142857142857em;
}

.emotion-4:first-child {
  padding-left: 0.5714285714285714em;
}

.emotion-4:last-child {
  padding-right: 0.5714285714285714em;
}

<Styled(div)>
  <div
    className="emotion-9"
  >
    <Card>
      <Card>
        <div
          className="emotion-8"
        >
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <Styled(div)>
            <div
              className="emotion-7"
            >
              <Button
                element="button"
                fullWidth={true}
                size="large"
                type="button"
              >
                <Button
                  element="button"
                  fullWidth={true}
                  size="large"
                  text="Button"
                  type="button"
                >
                  <button
                    className="emotion-6"
                    type="button"
                  >
                    <Styled(span)>
                      <span
                        className="emotion-5"
                      >
                        <Styled(span)
                          size="large"
                        >
                          <span
                            className="emotion-4"
                          >
                            Button
                          </span>
                        </Styled(span)>
                      </span>
                    </Styled(span)>
                  </button>
                </Button>
              </Button>
            </div>
          </Styled(div)>
        </div>
      </Card>
    </Card>
  </div>
</Styled(div)>
`;

exports[`Card demo examples Snapshots: clickable 1`] = `
.emotion-7::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-7 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-7 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-7 > *:nth-last-child(n+3),
  .emotion-7 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-3 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 > [role="img"] {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 0.5em;
  position: relative;
  top: 0.25em;
}

.emotion-0 {
  color: #58606e;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.125em;
  font-weight: 700;
  margin: 0;
}

.emotion-5 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-5:last-child {
  margin-bottom: 1.5em;
}

.emotion-4 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-6 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  cursor: pointer;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.emotion-6:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

<Styled(div)>
  <div
    className="emotion-7"
  >
    <Card
      onClick={[Function]}
    >
      <Card
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="emotion-6"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <CardBlock>
            <CardBlock>
              <div
                className="emotion-5"
              >
                <Styled(div)>
                  <div
                    className="emotion-4"
                  >
                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                  </div>
                </Styled(div)>
              </div>
            </CardBlock>
          </CardBlock>
        </div>
      </Card>
    </Card>
  </div>
</Styled(div)>
`;

exports[`Card demo examples Snapshots: order 1`] = `
.emotion-19 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-19 *,
.emotion-19 *::before,
.emotion-19 *::after {
  box-sizing: inherit;
}

.emotion-19:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-3 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 > [role="img"] {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 0.5em;
  position: relative;
  top: 0.25em;
}

.emotion-0 {
  color: #58606e;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.125em;
  font-weight: 700;
  margin: 0;
}

.emotion-4 {
  display: block;
  margin-bottom: 1em;
  margin-top: 1em;
  max-width: 100%;
}

.emotion-4:first-child {
  border-radius: 0.1875em 0.1875em 0 0;
  margin-top: 0;
}

.emotion-4:last-child {
  border-radius: 0 0 0.1875em 0.1875em;
  margin-bottom: 0;
}

.emotion-6 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-6:last-child {
  margin-bottom: 1.5em;
}

.emotion-5 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 100%;
  pointer-events: none;
  width: 100%;
}

.emotion-60::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-60 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-60 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-60 > *:nth-last-child(n+3),
  .emotion-60 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-60 img {
  width: 100%;
}

.emotion-15 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 0.5em;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.875em;
  margin-bottom: 0.5714285714285714em;
  margin-left: 0.5714285714285714em;
}

.emotion-9 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-9 *,
.emotion-9 *::before,
.emotion-9 *::after {
  box-sizing: inherit;
}

.emotion-9:focus {
  border-color: #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  background-color: #f5f7fa;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:focus:active,
.emotion-9:focus:hover {
  border-color: #1d5bbf;
}

.emotion-9:active {
  background-color: #ebeff5;
  color: #3272d9;
}

.emotion-9::-moz-focus-inner {
  border: 0;
}

.emotion-9 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-9 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-9 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-9 [role="img"]:only-child {
  margin: 0;
}

.emotion-7 {
  display: block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 0.875em;
  line-height: 2.2857142857142856em;
}

.emotion-13 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #3272d9;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-13 *,
.emotion-13 *::before,
.emotion-13 *::after {
  box-sizing: inherit;
}

.emotion-13:focus {
  background-color: #3272d9;
  box-shadow: 0 0 0 1px #ffffff,0 0 0 2px #1d5bbf;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13:hover {
  background-color: #5691f0;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13:focus:active,
.emotion-13:focus:hover {
  border-color: transparent;
}

.emotion-13:active {
  background-color: #1d5bbf;
  border-color: #1d5bbf;
  color: #ffffff;
}

.emotion-13::-moz-focus-inner {
  border: 0;
}

.emotion-13 [role="img"] {
  box-sizing: content-box;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-13 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-13 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-13 [role="img"]:only-child {
  margin: 0;
}

.emotion-18 {
  background-color: #ebeff5;
  border: 1px solid #c8d1e0;
  border-radius: 0 0 0.1875em 0.1875em;
  margin: 0 -1px calc(-1px - 0.01em) -1px;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-17 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-16 {
  color: #333840;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 0.875em;
  font-weight: 700;
  margin: 0;
}

<Styled(div)>
  <div
    className="emotion-60"
  >
    <Card>
      <Card>
        <div
          className="emotion-19"
        >
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <CardImage
            alt="gradient image"
            src="/images/500x500.png"
          >
            <CardImage
              alt="gradient image"
              src="/images/500x500.png"
            >
              <img
                alt="gradient image"
                className="emotion-4"
                src="/images/500x500.png"
              />
            </CardImage>
          </CardImage>
          <CardBlock>
            <CardBlock>
              <div
                className="emotion-6"
              >
                <Styled(div)>
                  <div
                    className="emotion-5"
                  >
                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                  </div>
                </Styled(div)>
              </div>
            </CardBlock>
          </CardBlock>
          <CardActions>
            <CardActions>
              <div
                className="emotion-15"
              >
                <Styled(span)
                  key="0/.0"
                >
                  <span
                    className="emotion-10"
                  >
                    <Button
                      element="button"
                      minimal={true}
                      size="medium"
                      type="button"
                    >
                      <Button
                        element="button"
                        minimal={true}
                        size="medium"
                        text="Button 1"
                        type="button"
                      >
                        <button
                          className="emotion-9"
                          type="button"
                        >
                          <Styled(span)>
                            <span
                              className="emotion-8"
                            >
                              <Styled(span)
                                size="medium"
                              >
                                <span
                                  className="emotion-7"
                                >
                                  Button 1
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </button>
                      </Button>
                    </Button>
                  </span>
                </Styled(span)>
                <Styled(span)
                  key="1/.1"
                >
                  <span
                    className="emotion-10"
                  >
                    <Button
                      element="button"
                      primary={true}
                      size="medium"
                      type="button"
                    >
                      <Button
                        element="button"
                        primary={true}
                        size="medium"
                        text="Button 2"
                        type="button"
                      >
                        <button
                          className="emotion-13"
                          type="button"
                        >
                          <Styled(span)>
                            <span
                              className="emotion-8"
                            >
                              <Styled(span)
                                size="medium"
                              >
                                <span
                                  className="emotion-7"
                                >
                                  Button 2
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </button>
                      </Button>
                    </Button>
                  </span>
                </Styled(span)>
              </div>
            </CardActions>
          </CardActions>
          <CardFooter
            title="Card Footer"
            triggerTitle={[Function]}
          >
            <CardFooter>
              <div
                className="emotion-18"
              >
                <Styled(div)>
                  <div
                    className="emotion-17"
                  >
                    <Styled(h4)>
                      <h4
                        className="emotion-16"
                      >
                        Card Footer
                      </h4>
                    </Styled(h4)>
                  </div>
                </Styled(div)>
              </div>
            </CardFooter>
          </CardFooter>
        </div>
      </Card>
    </Card>
    <Card>
      <Card>
        <div
          className="emotion-19"
        >
          <CardImage
            alt="gradient image"
            src="/images/500x500.png"
          >
            <CardImage
              alt="gradient image"
              src="/images/500x500.png"
            >
              <img
                alt="gradient image"
                className="emotion-4"
                src="/images/500x500.png"
              />
            </CardImage>
          </CardImage>
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <CardBlock>
            <CardBlock>
              <div
                className="emotion-6"
              >
                <Styled(div)>
                  <div
                    className="emotion-5"
                  >
                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                  </div>
                </Styled(div)>
              </div>
            </CardBlock>
          </CardBlock>
          <CardActions>
            <CardActions>
              <div
                className="emotion-15"
              >
                <Styled(span)
                  key="0/.0"
                >
                  <span
                    className="emotion-10"
                  >
                    <Button
                      element="button"
                      minimal={true}
                      size="medium"
                      type="button"
                    >
                      <Button
                        element="button"
                        minimal={true}
                        size="medium"
                        text="Button 1"
                        type="button"
                      >
                        <button
                          className="emotion-9"
                          type="button"
                        >
                          <Styled(span)>
                            <span
                              className="emotion-8"
                            >
                              <Styled(span)
                                size="medium"
                              >
                                <span
                                  className="emotion-7"
                                >
                                  Button 1
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </button>
                      </Button>
                    </Button>
                  </span>
                </Styled(span)>
                <Styled(span)
                  key="1/.1"
                >
                  <span
                    className="emotion-10"
                  >
                    <Button
                      element="button"
                      primary={true}
                      size="medium"
                      type="button"
                    >
                      <Button
                        element="button"
                        primary={true}
                        size="medium"
                        text="Button 2"
                        type="button"
                      >
                        <button
                          className="emotion-13"
                          type="button"
                        >
                          <Styled(span)>
                            <span
                              className="emotion-8"
                            >
                              <Styled(span)
                                size="medium"
                              >
                                <span
                                  className="emotion-7"
                                >
                                  Button 2
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </button>
                      </Button>
                    </Button>
                  </span>
                </Styled(span)>
              </div>
            </CardActions>
          </CardActions>
          <CardFooter
            title="Card Footer"
            triggerTitle={[Function]}
          >
            <CardFooter>
              <div
                className="emotion-18"
              >
                <Styled(div)>
                  <div
                    className="emotion-17"
                  >
                    <Styled(h4)>
                      <h4
                        className="emotion-16"
                      >
                        Card Footer
                      </h4>
                    </Styled(h4)>
                  </div>
                </Styled(div)>
              </div>
            </CardFooter>
          </CardFooter>
        </div>
      </Card>
    </Card>
    <Card>
      <Card>
        <div
          className="emotion-19"
        >
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <CardBlock>
            <CardBlock>
              <div
                className="emotion-6"
              >
                <Styled(div)>
                  <div
                    className="emotion-5"
                  >
                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                  </div>
                </Styled(div)>
              </div>
            </CardBlock>
          </CardBlock>
          <CardImage
            alt="gradient image"
            src="/images/500x500.png"
          >
            <CardImage
              alt="gradient image"
              src="/images/500x500.png"
            >
              <img
                alt="gradient image"
                className="emotion-4"
                src="/images/500x500.png"
              />
            </CardImage>
          </CardImage>
          <CardActions>
            <CardActions>
              <div
                className="emotion-15"
              >
                <Styled(span)
                  key="0/.0"
                >
                  <span
                    className="emotion-10"
                  >
                    <Button
                      element="button"
                      minimal={true}
                      size="medium"
                      type="button"
                    >
                      <Button
                        element="button"
                        minimal={true}
                        size="medium"
                        text="Button 1"
                        type="button"
                      >
                        <button
                          className="emotion-9"
                          type="button"
                        >
                          <Styled(span)>
                            <span
                              className="emotion-8"
                            >
                              <Styled(span)
                                size="medium"
                              >
                                <span
                                  className="emotion-7"
                                >
                                  Button 1
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </button>
                      </Button>
                    </Button>
                  </span>
                </Styled(span)>
                <Styled(span)
                  key="1/.1"
                >
                  <span
                    className="emotion-10"
                  >
                    <Button
                      element="button"
                      primary={true}
                      size="medium"
                      type="button"
                    >
                      <Button
                        element="button"
                        primary={true}
                        size="medium"
                        text="Button 2"
                        type="button"
                      >
                        <button
                          className="emotion-13"
                          type="button"
                        >
                          <Styled(span)>
                            <span
                              className="emotion-8"
                            >
                              <Styled(span)
                                size="medium"
                              >
                                <span
                                  className="emotion-7"
                                >
                                  Button 2
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </button>
                      </Button>
                    </Button>
                  </span>
                </Styled(span)>
              </div>
            </CardActions>
          </CardActions>
          <CardFooter
            title="Card Footer"
            triggerTitle={[Function]}
          >
            <CardFooter>
              <div
                className="emotion-18"
              >
                <Styled(div)>
                  <div
                    className="emotion-17"
                  >
                    <Styled(h4)>
                      <h4
                        className="emotion-16"
                      >
                        Card Footer
                      </h4>
                    </Styled(h4)>
                  </div>
                </Styled(div)>
              </div>
            </CardFooter>
          </CardFooter>
        </div>
      </Card>
    </Card>
  </div>
</Styled(div)>
`;
